# 200_hackathon

./: .env.example  .gitignore  .mcp-docs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  bootws
.github/ISSUE_TEMPLATE/: bug-report.md  feedback.md  pack-submission.md
config/: claude-code-setup.md  cursor-setup.md
docs/: README.md  faq.md  hackathon-guide.md  sdk-quick-reference.md  troubleshooting.md  value-proposition.md  what-is-huitzo.md
docs/concepts/: README.md  building-methodology.md  from-model-to-production.md  why-huitzo.md
scripts/: submit-pack.sh  validate-pack.sh
showcase/: README.md
starters/: README.md
starters/01-smart-notes/: .env.example  README.md  huitzo.yaml  pyproject.toml  tutorial.md
starters/01-smart-notes/examples/: test-commands.sh
starters/01-smart-notes/src/smart_notes/: __init__.py  commands.py
starters/01-smart-notes/tests/: test_commands.py
starters/02-ai-content-toolkit/: .env.example  README.md  huitzo.yaml  pyproject.toml  tutorial.md
starters/02-ai-content-toolkit/examples/: test-commands.sh
starters/02-ai-content-toolkit/src/ai_content_toolkit/: __init__.py  commands.py
starters/02-ai-content-toolkit/tests/: test_commands.py
starters/03-data-cruncher/: .env.example  README.md  huitzo.yaml  pyproject.toml  tutorial.md
starters/03-data-cruncher/examples/: test-commands.sh
starters/03-data-cruncher/examples/sample-data/: sales.csv
starters/03-data-cruncher/src/data_cruncher/: __init__.py  commands.py  models.py
starters/03-data-cruncher/tests/: test_commands.py
starters/04-lead-engine/: README.md  huitzo.yaml  pyproject.toml  tutorial.md
starters/04-lead-engine/examples/: full_workflow.sh
starters/04-lead-engine/src/lead_engine/: __init__.py  commands.py  models.py  templates.py
starters/04-lead-engine/tests/: conftest.py  test_commands.py  test_models.py
starters/05-devops-monitor/: .env.example  README.md  huitzo.yaml  pyproject.toml  tutorial.md
starters/05-devops-monitor/examples/: test-commands.sh
starters/05-devops-monitor/src/devops_monitor/: __init__.py  commands.py  models.py
starters/05-devops-monitor/tests/: conftest.py  test_commands.py  test_models.py
