# pyproject.toml - AI Content Toolkit Intelligence Pack
#
# Implements:
#   - docs/sdk/commands.md#packaging

[project]
name = "ai-content-toolkit"
version = "1.0.0"
description = "Beginner+ Intelligence Pack: AI-powered text summarization, entity extraction, and rewriting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Huitzo Hackathon", email = "hackathon@huitzo.com" }
]
keywords = ["huitzo", "intelligence-pack", "llm", "summarize", "entities", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.entry-points."huitzo.commands"]
"@huitzo/content/summarize" = "ai_content_toolkit.commands:summarize"
"@huitzo/content/extract-entities" = "ai_content_toolkit.commands:extract_entities"
"@huitzo/content/rewrite" = "ai_content_toolkit.commands:rewrite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_content_toolkit"]

[tool.huitzo]
namespace = "content"
version = "1.0.0"
description = "AI-powered text summarization, entity extraction, and rewriting"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
