# pyproject.toml - DevOps Monitor Starter Template
#
# Implements:
#   - docs/sdk/commands.md#entry-points

[project]
name = "devops-monitor"
version = "1.0.0"
description = "Intelligent health monitoring with AI diagnostics and multi-channel alerts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Huitzo Hackathon", email = "hackathon@huitzo.com" }
]
keywords = ["huitzo", "intelligence-pack", "devops", "monitoring", "alerting", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.entry-points."huitzo.commands"]
"@huitzo/monitor/health-check" = "devops_monitor.commands:health_check"
"@huitzo/monitor/diagnose" = "devops_monitor.commands:diagnose"
"@huitzo/monitor/alert" = "devops_monitor.commands:alert"
"@huitzo/monitor/status-report" = "devops_monitor.commands:status_report"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devops_monitor"]

[tool.huitzo]
namespace = "monitor"
version = "1.0.0"
description = "Intelligent health monitoring with AI diagnostics"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
